bld/wipfc/test/neg/neg1.ipf
.* malformed document, missing userdoc and euserdoc

